--- a/pratikum 3.html
+++ b/pratikum 3.html
@@ -12,11 +12,11 @@
         <h1> CIPUNG</h1>
         <p> Hai, Ini Foto Cipung</p>
         <p align="justify" > Saya Gracea, saya merupakan mahasiswa semester 5 dari prodi Ilmu Komputer 
-            <br> saat ini saya sedang mengikuti mata kuliah pratikum bahasa pemograman HTML.
+            <br> saat ini saya sedang mengikuti mata kuliah praktikum bahasa pemograman Web.
             <br> Saya sangat menyukai cipung because cipung is so cute.
         </p>
         <p> Saya baru mempelajari web development, karena itu 
-            saya akan terus mempelajarinya
+            saya akan terus mempelajarinya. 
         </p>
         
         <section> 
